add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h1>Start building habits.</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus voluptates, minus aperiam explicabo vitae nostrum tenetur et ipsam neque sit incidunt animi ipsa beatae! Quidem officiis reiciendis asperiores ducimus voluptatibus.</p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
